--- a/build.gradle
+++ b/build.gradle
@@ -18,5 +18,6 @@ dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.4.0'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.12.1'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.25.0'
+    testImplementation 'io.cucumber:cucumber-java:4.2.6'
 }
 
